@@ -4,6 +4,12 @@ herbstluftwm NEWS -- History of user-visible changes
 See the link:MIGRATION[] file for changes that introduced incompatibility to
 older versions.
 
+Current git version
+-------------------
+
+  * Bug fixes:
+    - Update floating geometry if a client's size hints change
+
 Release 0.9.3 on 2021-05-15
 ---------------------------
 
